2006-06-14  Chenthill Palanisamy  <pchenthill@novell.com>
	
	* configure.in: Use libgnomeprint-2.2 >= 2.7.0.

2006-06-02 Iain Buchanan <iaindb@netspace.net.au>

	* configure.in: Fix typo that caused experimental plugins
	to be skipped.

2006-05-29  Harish Krishnaswamy  <kharish@novell.com>

	* NEWS, configure.in: Release updates and version
	bump. Release - Evolution 2.6.2

2006-04-28  Sven Herzberg  <herzi@gnome-de.org>

	reviewed by: Srinivasa Ragavan

	* shell/apps_evolution_shell.schemas.in.in: added boolean key for the
	maximized state of the window
	* shell/e-shell-window.c: added window state saving and updated window
	size saving to work as expected (fixes bug 243962)

2006-04-25  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Figure out auto-magically what the mozilla-nss
	pkg-config module name is.

2006-04-10  Harish Krishnaswamy <kharish@novell.com>

	--------------------------
	Release : Evolution 2.6.1
	--------------------------

	* NEWS, configure.in: Release updates and version bump.

2006-04-08  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* configure.in (ALL_LINGUAS): Added Breton (br).

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-22  Tor Lillqvist  <tml@novell.com>

	* evolution-zip.in: The evolution.keys and evolution.mime files
	don't have any version number in their name. I doubt these files
	actually get used on Win32, though, so prolly silly to put them in
	the zip file.

2006-03-14  Vladimer Sichinava  <alinux@siena.linux.it>

        * configure.in: Added "ka" Georgian tu ALL_LINGUAS
	
2006-03-13  Harish Krishnaswamy  <kharish@novell.com>

	* NEWS, configure.in : Release updates and version bump.
	--------------------------
	Release : Evolution 2.6.0
	--------------------------
	
	* data/Makefile.am: Delink the version from the desktop file
	to enable smoother upgrades.

2006-03-12  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* mail/default/Makefile.am: